<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.TatkalReminderActivity">


    <TextView
        android:id="@+id/tr_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:text="@string/travel_title"
        android:textColor="@color/labelcolor" />

    <EditText
        android:id="@+id/tr_event_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tr_title_textview"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:maxEms="10"
        android:maxLength="30"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tr_traveldate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tr_event_title_input"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:text="@string/select_date"
        android:textColor="@color/labelcolor" />

    <EditText
        android:id="@+id/tr_traveldate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tr_traveldate_textview"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:hint="@string/travel_date"
        android:inputType="date"
        android:onClick="showDatePickerDialogOnButtonClick"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/checkBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tr_traveldate">

        <CheckBox
            android:id="@+id/acCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:text="@string/ac" />

        <CheckBox
            android:id="@+id/nonAcCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:text="@string/non_ac" />
    </LinearLayout>

    <Button
        android:id="@+id/create120DayReminderEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBoxes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="createEvent"
        android:textColor="@color/labelcolor"
        android:text="@string/create_reminder" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>