<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.CustomReminderActivity">


    <Button
        android:id="@+id/create120DayReminderEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cr_reminderdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="createEvent"
        android:text="@string/create_reminder"
        android:textColor="@color/labelcolor" />

    <EditText
        android:id="@+id/cr_traveldate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cr_traveldate_textview"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:hint="@string/travel_date"
        android:inputType="date"
        android:onClick="showDatePickerDialogForTravelDate"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/cr_reminderdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cr_reminderdate_textview"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:hint="@string/travel_date"
        android:inputType="date"
        android:onClick="showDatePickerDialogForReminderDate"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/cr_event_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cr_title_textview"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:maxEms="10"
        android:maxLength="30"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/cr_reminderdate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cr_traveldate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/select_rem_date"
        android:textColor="@color/labelcolor" />

    <TextView
        android:id="@+id/cr_traveldate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cr_event_title_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/select_date"
        android:textColor="@color/labelcolor" />

    <TextView
        android:id="@+id/cr_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/travel_title"
        android:textColor="@color/labelcolor" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adUnitId="@string/ad_unit_id" />
</RelativeLayout>