<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advance_booking"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context=".activities.AdvanceBookingReminderActivity">

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/create120DayReminderEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ab_result_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="createEvent"
        android:text="@string/create_reminder"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/ab_event_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ab_title_textview"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:maxEms="10"
        android:maxLength="30"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/ab_traveldate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ab_traveldate_textview"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:hint="@string/travel_date"
        android:inputType="date"
        android:onClick="showDatePickerDialogOnButtonClick"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/ab_result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ab_traveldate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/resultText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ab_traveldate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ab_event_title_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/select_date"
        android:textColor="@color/labelcolor" />

    <TextView
        android:id="@+id/ab_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/travel_title"
        android:textColor="@color/labelcolor" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adUnitId="@string/ad_unit_id" />
</RelativeLayout>