<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".activities.HolidayListActivity">

    <TextView
        android:id="@+id/booking_day_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/booking_date_alert"
        android:textAlignment="center"
        android:textColor="#D50000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/booking_day_alert"
        android:background="@color/sortBarLine"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/disclaimer"
        android:textAlignment="center"
        android:textColor="@color/resultText"
        android:textSize="12sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/holidaylistrecycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_below="@id/disclaimer"
        android:scrollbars="vertical" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_unit_id" />


</RelativeLayout>