<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advance_booking"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.BookingDayCalculatorActivity">

    <TextView
        android:id="@+id/bc_traveldate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ab_event_title_input"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:text="@string/select_date"
        android:textColor="@color/labelcolor" />

    <EditText
        android:id="@+id/bc_traveldate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bc_traveldate_textview"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:hint="@string/travel_date"
        android:inputType="date"
        android:onClick="showDatePickerDialogOnButtonClick"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/bc_result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/resultText"
        android:textSize="16sp" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>