<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/create_event_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/successImage"
                android:layout_centerHorizontal="true"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_below="@id/event_created_note"
                android:src="@drawable/alarm_set_gif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/successImage"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/goto_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/goto_home" />

                <Button
                    android:id="@+id/create_another"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/create_another" />

            </LinearLayout>

            <TextView
                android:id="@+id/event_created_note"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/success_note"
                android:textAlignment="center"
                android:textSize="20sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>